--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Proposal to Sravya Rajamahanthi</title>
+  <title>Proposal to Cs</title>
   <link rel="stylesheet" href="srav.css" />
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
-    <h1 class="name">Sravya Rajamahanthi</h1>
+    <h1 class="name">Cs</h1>
     <p class="message">I have something very special to ask you...</p>
     <button onclick="showProposal()">Click Here 💌</button>
 
     <div class="proposal-box" id="proposalBox">
-      <p class="proposal-text">Will you marry me, Sravya?</p>
+      <p class="proposal-text">Will you marry me, CS?</p>
       <div class="response-buttons">
         <button class="yes-btn" onclick="handleYes()">Yes 💖</button>
         <button class="no-btn" onclick="handleNo()">No 😢</button>
