--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Proposal to Cs</title>
-  <link rel="stylesheet" href="srav.css" />
+  <link rel="stylesheet" href="Cs.css" />
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -25,6 +25,6 @@
   </div>
 
   <canvas id="heartCanvas"></canvas>
-  <script src="srav.js"></script>
+  <script src="Cs.js"></script>
 </body>
 </html>
