--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="name">Chillale Seema</h1>
+    <h1 class="name">Cs</h1>
     <p class="message">I have something very special to ask you...</p>
     <button onclick="showProposal()">Click Here 💌</button>
 
     <div class="proposal-box" id="proposalBox">
-      <p class="proposal-text">Will you marry me, Seema?</p>
+      <p class="proposal-text">Will you marry me, cs?</p>
       <div class="response-buttons">
         <button class="yes-btn" onclick="handleYes()">Yes 💖</button>
         <button class="no-btn" onclick="handleNo()">No 😢</button>
